# Horizons

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENT_EXEC_PYTHON.md  README.md  docker-compose.prod.yml  docker-compose.yml  generate_diagram.py  gepa_issues.txt  issues.txt  online_gepa.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly-tag.yml  release.yml
charts/horizons/: .helmignore  Chart.yaml  README.md  values.yaml
charts/horizons/ci/: dev-values.yaml  prod-values.yaml
charts/horizons/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  pvc.yaml  redis.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/horizons/templates/tests/: test-connection.yaml
diagram/: gen.mjs  package.json
docs/: BRANCHING.md  LAMINAR.md
horizons_core/: Cargo.toml
horizons_core/examples/: verify_victorialogs.rs
horizons_core/migrations/: 0001_init.sql
horizons_core/src/: error.rs  lib.rs  models.rs
horizons_core/src/context_refresh/: engine.rs  mod.rs  models.rs  schedule.rs  traits.rs
horizons_core/src/core_agents/: approvals.rs  event_trigger.rs  executor.rs  mcp.rs  mcp_gateway.rs  mod.rs  models.rs  policies.rs  sandboxed_agent.rs  scheduler.rs  traits.rs
horizons_core/src/engine/: actor_runtime_contract.rs  daytona_backend.rs  docker_backend.rs  health_monitor.rs  local_adapter.rs  mcp_tool_server.rs  mod.rs  models.rs  orchestrator_agent_runtime.rs  sandbox_agent_client.rs  sandbox_runtime.rs  traits.rs  victoria_logs.rs
horizons_core/src/evaluation/: engine.rs  mod.rs  traits.rs  wiring.rs
horizons_core/src/events/: bus.rs  config.rs  dlq.rs  error.rs  memory.rs  mod.rs  models.rs  operations.rs  postgres.rs  router.rs  sqlite.rs  store.rs  test_support.rs  traits.rs  webhook.rs
horizons_core/src/memory/: mod.rs  traits.rs  wiring.rs
horizons_core/src/o11y/: console.rs  conventions.rs  mod.rs  otel.rs  redaction.rs  traits.rs
horizons_core/src/onboard/: config.rs  helix_client.rs  mod.rs  models.rs  postgres.rs  postgres_project_db.rs  redis.rs  s3.rs  secrets.rs  sqlite.rs  sqlite_project_db.rs  traits.rs  turso.rs
horizons_core/src/optimization/: continual.rs  engine.rs  mod.rs  traits.rs  wiring.rs
horizons_core/src/pipelines/: engine.rs  mod.rs  models.rs  traits.rs
horizons_graph/: Cargo.toml  LICENSE.md
horizons_graph/graphs/: verifier_contrastive_rlm.yaml  verifier_contrastive_single.yaml  verifier_fewshot_rlm.yaml  verifier_fewshot_single.yaml  verifier_rubric_rlm.yaml  verifier_rubric_single.yaml
horizons_graph/src/: definition.rs  engine.rs  error.rs  ir.rs  lib.rs  llm.rs  mapping.rs  python.rs  registry.rs  run.rs  template.rs  tools.rs  trace.rs
horizons_graph/src/rlm_v1/: errors.rs  limits.rs  messages.rs  mod.rs  output.rs  runner.rs  schema.rs  trace.rs
horizons_graph/src/rlm_v1/tools/: builtin.rs  mod.rs  python_sandbox.rs
horizons_integrations/: Cargo.toml
horizons_integrations/src/: lib.rs
horizons_integrations/src/connectors/: github.rs  gmail.rs  hubspot.rs  jira.rs  linear.rs  linkedin.rs  mod.rs  slack.rs
horizons_integrations/src/langfuse/: mapping.rs  mod.rs  types.rs
horizons_integrations/src/queue_backends/: mod.rs  rabbitmq.rs  sqs.rs
horizons_integrations/src/vector/: mod.rs  pgvector.rs
horizons_py/: README.md  pyproject.toml
horizons_py/horizons/: __init__.py  actions.py  agents.py  client.py  context_refresh.py  engine.py  evaluation.py  events.py  exceptions.py  mcp.py  memory.py  models.py  onboard.py  optimization.py  pipelines.py
horizons_py/tests/: test_client.py
horizons_rs/: Cargo.toml  README.md
horizons_rs/src/: client.rs  dev_backends.rs  error.rs  extract.rs  lib.rs  main.rs  server.rs  types.rs
horizons_rs/src/apis/: actions.rs  agents.rs  context_refresh.rs  engine.rs  evaluation.rs  events.rs  mcp.rs  memory.rs  mod.rs  onboard.rs  optimization.rs  pipelines.rs
horizons_rs/src/routes/: actions.rs  config.rs  context_refresh.rs  engine.rs  evaluation.rs  events.rs  graph.rs  health.rs  mcp.rs  mod.rs  onboard.rs  optimization.rs  pipelines.rs
horizons_server/: Cargo.toml
horizons_server/src/: admin.rs  auth.rs  cli.rs  dev_backends.rs  error.rs  extract.rs  lib.rs  main.rs  middleware.rs  server.rs
horizons_server/src/routes/: actions.rs  agents.rs  assets.rs  audit.rs  context_refresh.rs  core_agents.rs  credentials.rs  engine.rs  events.rs  filestore.rs  graph.rs  mcp.rs  memory.rs  mod.rs  onboard.rs  optimization.rs  orgs.rs  pipelines.rs  projects.rs  tick.rs
horizons_ts/: README.md  package-lock.json  package.json  tsconfig.build.cjs.json  tsconfig.build.esm.json  tsconfig.json
horizons_ts/scripts/: postbuild.mjs
horizons_ts/src/: actions.ts  agents.ts  client.test.ts  client.ts  contextRefresh.ts  engine.ts  evaluation.ts  events.ts  index.ts  mcp.ts  memory.ts  onboard.ts  optimization.ts  pipelines.ts  types.ts
mipro_v2/: Cargo.toml
mipro_v2/src/: config.rs  dataset.rs  evaluator.rs  lib.rs  optimizer.rs  sampler.rs
rlm/: Cargo.toml  README.md
rlm/src/: lib.rs  models.rs  report.rs  verifier.rs
scripts/diagram/: diagram.txt  generate_diagram.py
scripts/diagram/node/: gen.mjs  package-lock.json
scripts/notes/: IMPLEMENT_EXEC_PYTHON.md  better_rlm.txt
specifications/horizons/specs/: rlm_exec_python.md
voyager/: Cargo.toml  README.md
voyager/src/: config.rs  lib.rs  memory.rs  models.rs  retrieval.rs  store.rs  summarizer.rs
