[package]
name = "horizons_integrations"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE.md"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.40", features = ["serde"] }
horizons_core = { path = "../horizons_core", default-features = false }
futures-util = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
aws-sdk-sqs = { version = "1.71.0", default-features = false, features = ["behavior-version-latest", "rustls"] }
lapin = { version = "2.3.4", default-features = false, features = ["rustls"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "uuid"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.5.8", default-features = false, features = ["behavior-version-latest", "rustls"] }
aws-smithy-runtime = { version = "1.7.1", features = ["test-util"] }
aws-smithy-types = { version = "1.2.2" }

[features]
default = []
memory = ["horizons_core/memory"]
optimization = ["horizons_core/optimization"]
evaluation = ["horizons_core/evaluation"]
linkedin = []
jira = []
gmail = []
slack = []
github = []
linear = []
hubspot = []
sqs = []
rabbitmq = []
pgvector = ["dep:sqlx", "dep:tokio"]
all = [
  "jira",
  "linkedin",
  "gmail",
  "slack",
  "github",
  "linear",
  "hubspot",
  "sqs",
  "rabbitmq",
  "pgvector",
]
