[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horizons"
version = "0.1.2.dev0"
description = "Horizons async SDK for Python"
authors = [{name="Horizons Team", email="dev@synth.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "typing_extensions>=4.9.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.5",
  "respx>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["horizons"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
