[package]
name = "horizons_rs"
version = "0.1.2-dev.0"
edition = "2024"
license-file = "LICENSE.md"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.89"
axum = { version = "0.8.1", features = ["macros", "json"] }
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
futures-util = "0.3.31"
horizons_core = { path = "../horizons_core", default-features = false }
horizons_integrations = { path = "../horizons_integrations", default-features = false, features = ["pgvector"] }
http = "1.2.0"
mipro_v2 = { path = "../mipro_v2", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json"] }
thiserror = "2.0.11"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
ulid = "1.2.1"
uuid = { version = "1.15.1", features = ["serde", "v4"] }
voyager = { path = "../voyager", optional = true }

[features]
default = []
memory = ["horizons_core/memory", "dep:voyager"]
optimization = ["horizons_core/optimization", "dep:mipro_v2"]
evaluation = ["horizons_core/evaluation"]
all = ["memory", "optimization", "evaluation"]

[dev-dependencies]
hyper = "1.6.0"
tempfile = "3.16.0"
tower = "0.5.2"
