[package]
name = "horizons-ai"
version = "0.1.2-dev.0"
edition = "2024"
description = "Async Rust SDK for the Horizons REST API"
repository = "https://github.com/horizons-laboratories/Horizons"
homepage = "https://horizons.ai"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["ai", "agents", "sdk", "horizons"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
async-stream = "0.3"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
uuid = { version = "1.15.1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
