[package]
name = "rlm-rs"
version = "0.1.0"
edition = "2024"
description = "Recursive Language Models — sandboxed LLM inference with unbounded compute"
license-file = "LICENSE.md"
repository = "https://github.com/synth-laboratories/rlm"
keywords = ["llm", "recursive", "language-model", "inference", "sandbox"]
categories = ["science", "algorithms"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
